Network_Policy/NginxPod.yaml
apiVersion: v1

kind: Pod

metadata:
  name: nginx-pod
  namespace: rishi
  labels:
    app: nginx
spec:
  containers:
    - name: nginx-container
      image: nginx:latest
      ports:
      - containerPort: 80
      resources:
        requests:
          cpu: "250m"
          memory: "512Mi"
        limits:
          cpu: "1"
          memory: "1Gi"
